--- a/layouts/index.html
+++ b/layouts/index.html
@@ -169,6 +169,7 @@
               <i class="{{.icon }} icon mb-5 d-inline-block"></i>
               <h4 class="mb-4">{{.title}}</h4>
               <p>{{.content | markdownify}}</p>
+              <p>{{.source}}</p>
             </div>
           </div>
         </div>
