change client logo and services

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -169,7 +169,7 @@
               <i class="{{.icon }} icon mb-5 d-inline-block"></i>
               <h4 class="mb-4">{{.title}}</h4>
               <p>{{.content | markdownify}}</p>
-              <p>{{.source}}</p>
+              <p class="mb-0 text-light">{{.source}}</p>
             </div>
           </div>
         </div>
