All change page about

--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -63,7 +63,7 @@
 <!-- ./Work Process -->
 
 <!-- team -->
-{{ if .Site.Data.about.team.enable }}
+<!-- {{ if .Site.Data.about.team.enable }}
 {{ with .Site.Data.about.team }}
 <section class="section bg-cover" data-background="{{`images/backgrounds/team-bg.png`|relURL}}">
   <div class="container">
@@ -86,7 +86,7 @@
   </div>
 </section>
 {{ end }}
-{{ end }}
+{{ end }} -->
 <!-- /team -->
 
 {{ if .Site.Data.about.clients_logo_slider.enable }}
