--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -2,10 +2,13 @@
   <article class="card shadow">
     <img class="rounded card-img-top" src="{{.Params.Image | relURL}}" alt="{{.Title }}">
     <div class="card-body">
-      <h4 class="card-title"><a class="text-dark" href="{{.Permalink}}">{{.Title }}</a>
+      <h4 class="card-title"><a class="text-dark">{{.Title }}</a>
       </h4>
       <p class="cars-text">{{.Summary}}</p>
-      <a href="{{.Permalink}}" class="btn btn-xs btn-primary">En savoir plus</a>
+      {{ if and ( ne .URL "" ) ( ne .URL "#" ) }}
+      <a href="{{ .URL | safeURL }}" class="btn btn-xs btn-primary">En savoir plus</a>
+      {{ else }}
+      <span class="btn btn-xs btn-primary">En savoir plus</span>
     </div>
   </article>
 </div>
