change blog homepage

--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -9,6 +9,7 @@
       <a href="{{ .URL | safeURL }}" class="btn btn-xs btn-primary">En savoir plus</a>
       {{ else }}
       <span class="btn btn-xs btn-primary">En savoir plus</span>
+      {{ end }}
     </div>
   </article>
 </div>
