url change blog

--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,5 +1,5 @@
 <div class="col-lg-4 col-sm-6 mb-4">
-  {{ range .Site.Data.homepage.clients_logo_slider.item }}
+  {{ range .Site.Data.homepage.blog.item }}
   <article class="card shadow">
     <img class="rounded card-img-top" src="{{.Params.Image | relURL}}" alt="{{.Title }}">
     <div class="card-body">
