--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,7 +1,7 @@
 <div class="col-lg-4 col-sm-6 mb-4">
   {{ range .Site.Data.homepage.blog.item }}
   <article class="card shadow">
-    <img class="rounded card-img-top" src="{{.Params.Image | relURL}}" alt="{{.Title }}">
+    <img class="rounded card-img-top" src="{{.image | absURL}}" alt="{{.Title }}">
     <div class="card-body">
       <h4 class="card-title"><a class="text-dark">{{.Title }}</a>
       </h4>
