--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,17 +1,23 @@
 <div class="col-lg-4 col-sm-6 mb-4">
+  {{ range .Site.Data.homepage.blog.item }}
+  {{ if and ( ne .URL "" ) ( ne .URL "#" ) }}
   <article class="card shadow">
     <img class="rounded card-img-top" src="{{.image | absURL}}" alt="{{.Title }}">
     <div class="card-body">
-      {{ range .Site.Data.homepage.blog.item }}
-      <h4 class="card-title"><a class="text-dark">{{.Title }}</a>
-      </h4>
+      <h4 class="card-title"><a href="{{ .URL | safeURL }}" class="text-dark">{{.Title }}</a></h4>
       <p class="cars-text">{{.Summary}}</p>
-      {{ if and ( ne .URL "" ) ( ne .URL "#" ) }}
       <a href="{{ .URL | safeURL }}" class="btn btn-xs btn-primary">En savoir plus</a>
-      {{ else }}
-      <span class="btn btn-xs btn-primary">En savoir plus</span>
-      {{ end }}
-      {{ end }}
+      <p class="cars-text">{{.Summary}}</p><span class="btn btn-xs btn-primary">En savoir plus</span>
     </div>
   </article>
+  {{ else }}
+  <article class="card shadow">
+    <img class="rounded card-img-top" src="{{.image | absURL}}" alt="{{.Title }}">
+    <div class="card-body">
+      <h4 class="card-title"><span class="text-dark">{{.Title }}</span></h4>
+      <p class="cars-text">{{.Summary}}</p><span class="btn btn-xs btn-primary">En savoir plus</span>
+    </div>
+  </article>
+  {{ end }}
+  {{ end }}
 </div>
