--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,6 +1,5 @@
 {{ range .Site.Data.homepage.blog.item }}
-<!-- <div class="col-lg-4 col-sm-6 mb-4"> -->
-<div class=" d-flex align-items-center">
+<div class="col-lg-4 col-sm-6 mb-4">
   <!-- {{ if and ( ne .URL "" ) ( ne .URL "#" ) }} -->
   <article class="card shadow">
     <img class="rounded card-img-top" src="{{.image | absURL}}" alt="{{.Title }}">
