test comment list file

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,7 @@
-{{ define "main" }}
+<!-- {{ define "main" }}
 
   {{ partial "page-title.html" . }}
 
-  <!-- blog -->
   <section class="section">
     <div class="container">
       <div class="row">
@@ -12,6 +11,5 @@
       </div>
     </div>
   </section>
-  <!-- /blog -->
 
-{{ end }}
+{{ end }} -->
