--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,4 @@
-<!-- {{ define "main" }}
+{{ define "main" }}
 
   {{ partial "page-title.html" . }}
 
@@ -12,4 +12,4 @@
     </div>
   </section>
 
-{{ end }} -->
+{{ end }}
