--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,4 +1,5 @@
 {{ range .Site.Data.homepage.blog.item }}
+{{ if and ( ne .URL "" ) ( ne .URL "#" ) }}
 <div class="col-lg-4 col-sm-6 mb-4">
   <article class="card shadow">
     <img class="rounded card-img-top" src="{{.image | absURL}}" alt="{{.Title }}">
@@ -9,4 +10,16 @@
     </div>
   </article>
 </div>
+{{ else }}
+<div class="col-lg-4 col-sm-6 mb-4">
+  <article class="card shadow">
+    <img class="rounded card-img-top" src="{{.image | absURL}}" alt="{{.Title }}">
+    <div class="card-body">
+      <h4 class="card-title"><a href="{{ .URL | safeURL }}" class="text-dark">{{.Title }}</a></h4>
+      <p class="cars-text">{{.Summary}}</p>
+      <span class="btn btn-xs btn-primary">En savoir plus</span>
+    </div>
+  </article>
+</div>
+{{ end }}
 {{ end }}
