--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,10 +1,10 @@
 <div class="col-lg-4 col-sm-6 mb-4">
   <article class="card shadow">
-    <img class="rounded card-img-top" src="{{.image | absURL}}" alt="{{.Title }}">
+    <img class="rounded card-img-top" src="{{.Params.Image | relURL}}" alt="{{.Title }}">
     <div class="card-body">
-      <h4 class="card-title"><a href="{{ .URL | safeURL }}" class="text-dark">{{.Title }}</a></h4>
+      <h4 class="card-title"><a href="{{ .Permalink }}" class="text-dark">{{.Title }}</a></h4>
       <p class="cars-text">{{.Summary}}</p>
-      <a href="{{ .URL | safeURL }}" class="btn btn-xs btn-primary">En savoir plus</a>
+      <a href="{{ .Permalink }}" class="btn btn-xs btn-primary">En savoir plus</a>
     </div>
   </article>
 </div>
