--- a/layouts/index.html
+++ b/layouts/index.html
@@ -239,7 +239,7 @@
             <i class="ti-quote-right text-white icon mb-4 d-inline-block"></i>
             <p class="text-white mb-4">{{.content | markdownify}}</p>
             <img class="img-fluid rounded-circle mb-4 d-inline-block" src="{{.image | absURL }}" alt="client-image">
-            <h4 class="text-white">{{.name }}</h4>
+            <a href="{{ .URL | safeURL }}"><h4 class="text-white">{{.name }}</h4></a>
             <h6 class="text-light mb-4">{{ .designation }}</h6>
           </div>
           {{ end }}
