--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -31,7 +31,7 @@
           {{ if and ( ne .project_url "" ) ( ne .project_url "#" ) }}
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="{{ .project_url | safeURL }}">voir le projet</a>
+              <a class="btn btn-light btn-sm" href="{{ .project_url | safeURL }} target="_blank">voir le projet</a>
             </div>
           </div>
           {{ end }}
