--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-12">
               <textarea name="message" id="message" class="form-control px-0 mb-4"
-                placeholder="Commentaire"></textarea>
+                placeholder="Message"></textarea>
             </div>
             <div class="col-lg-6 col-10 mx-auto">
               <button class="btn btn-primary w-100">Envoyer</button>
@@ -42,7 +42,7 @@
           <p class="text-white paragraph-lg font-secondary">{{.Site.Params.email}}</p>
         </div>
         <div class="col-md-4">
-          <h5 class="text-light">Télephone</h5>
+          <h5 class="text-light">Téléphone</h5>
           <p class="text-white paragraph-lg font-secondary">{{.Site.Params.phone}}</p>
         </div>
         <div class="col-md-4">
