--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -16,6 +16,7 @@
           {{ $categories = $categories | append .category }}
           {{ end }}
           {{ range ( $categories | uniq ) }}
+          <p>teyduzqferoper</p>
           <label class="btn btn-sm btn-primary">
             <input type="radio" name="shuffle-filter" value="{{ . | urlize }}" />{{ . | humanize }}
           </label>
